fixed layout issues

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -7,10 +7,14 @@
     margin-top: 4em;
 }
 
+#idTop {
+    background: white;
+}
+
 .display {
     letter-spacing: 2px;
-    font-size: 45px;
-    line-height: 70px;
+    font-size: 5vw;
+    line-height: 10vh;
     padding-left: 0;
 }
 
@@ -37,9 +41,10 @@ body {
    /* background-color: white;*/
     margin-left: 15;
     margin-right: 15;
-    height: 45px;
+    height: 55px;
     padding-top: 25;
     padding-bottom: 20;
+    background: white;
 }
 
 body h1, h2, h3, h4 {
@@ -60,7 +65,6 @@ body h1, h2, h3, h4 {
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
-    height: 10px;
 }
  
 .jumbo {
@@ -101,7 +105,7 @@ h1 {
 .img-fluid, .mask {
     /*height: 220px;*/
     width: 100%;
-    max-height: 156px;
+    /* max-height: 156px; */
 }
 
 .mask {
@@ -157,7 +161,7 @@ height: 100%;
 }
 
 body.contactBody {
-background-image: url(../assets/images/SF.PNG);
+background-image: url(../images/SF.PNG);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -174,8 +178,8 @@ background-image: url(../assets/images/SF.PNG);
 }*/
 
 #bio-image {
-    height: 400px;
-    width: 400px;
+    /* height: 400px; */
+    width: 100%;
     float: left;
 }
 
@@ -250,13 +254,17 @@ div.overlay {
 	opacity: 1;
 }
 body.contactBody .whiteContainer {
-	width: 280px;
+	width: 80vw;
 	position: relative;
-	left: calc(50% - 140px);
+	left: calc(50% - 40vw);
 	top: 80px;
 	margin-left: 0;
 	margin-right: 0;
 	background-color: #fff;
 	/*margin-left: auto;
 	margin-right: auto;*/
+}
+
+#NavBarResponsive {
+    background: white;
 }
